<resources>
    <string name="app_name">이거 부르려고</string>

    <!-- main fragment -->
    <string name="main_frag_sing_btn">Sing a song</string>
    <string name="main_frag_load_music_btn">Load music</string>
    <string name="main_frag_options_btn">Options</string>

    <!-- StringInputFragment -->
    <string name="input_frag_editText_hint">입력해</string>

    <!-- listFragment, Alert Dialog -->
    <string name="pick_action">무엇을 할까?</string>
    <array name="action_array">
        <item>Rename</item>
        <item>Delete</item>
    </array>
    <string name="audioList_List_is_null_text">생성한 답안지가 없습니다</string>
    <string name="singleListItem_start_btn">시작</string>
    <string name="singleListItem_preview_btn">미리듣기</string>

    <!-- OptionFragment -->
    <string name="optionFrag_radioLabel">채점 옵션</string>
    <string name="optionFrag_option1">더 세세하게</string>
    <string name="optionFrag_option2">더 쉽게</string>

    <string name="waitFrag_shiftLabel">얼마나 높이거나 낮출것인지 입력</string>
    <string name="waitFrag_shiftAmount">0</string>


    <!-- WaitFragment -->
    <string name="waitFrag_radioLabel">곡의 장르를 선택해주세요</string>
    <string name="waitFrag_option1">팝송</string>
    <string name="waitFrag_option2">락</string>
    <string name="waitFrag_option3">전자 음악</string>
    <string name="waitFrag_option4">힙합</string>
    <string name="waitFrag_option5">발라드</string>

    <!-- Wait Fragment Text -->
    <string name="wait_frag_server_connect">서버에 연결중입니다</string>
    <string name="wait_frag_server_reply">서버로부터 응답을 기다리고 있습니다. 시간이 소요 될 수 있습니다.</string>
    <string name="wait_frag_server_make_answer_sheet">답안지를 만들고 있습니다.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
